--- a/i2f-ui/public/index.html
+++ b/i2f-ui/public/index.html
@@ -118,5 +118,22 @@
         animation-play-state: paused;
     }
 
+    @media (min-width:769px) and (max-width: 1280px) {
+        .space-text{
+            font-size: 20px;
+        }
+        body{
+            zoom: 0.68;
+        }
+    }
+
+    @media (max-width: 768px) {
+        .space-text{
+            font-size: 16px;
+        }
+        body{
+            zoom: 0.45;
+        }
+    }
 </style>
 </html>
