--- a/i2f-web/public/index.html
+++ b/i2f-web/public/index.html
@@ -7,8 +7,8 @@
     <link href="<%= BASE_URL %>favicon.ico" rel="icon">
     <title><%= htmlWebpackPlugin.options.title %></title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" />
-    <script src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/katex@0.11.1/dist/katex.min.css" />
+    <script src="https://unpkg.com/katex@0.11.1/dist/katex.js"></script>
     <script src="https://unpkg.com/mermaid/dist/mermaid.min.js"></script>
 </head>
 <body>
